# fastapi-prisma

./: README.md  pyproject.toml  railway.json  requirements.txt
app/: dependencies.py  main.py
app/routers/: posts.py  users.py
prisma/: database.db  schema.prisma
