[tool.poetry]
name = "railway-fastapi-prisma-template"
version = "0.1.0"
description = "A template that starts up a FastAPI server that uses Prisma to store data"
authors = ["JedersonLuz <jedersonalpha@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
prisma = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
